Revert "minor fixes bib"
This reverts commit a4d45b627c7ea496dd400b254722fa8570cca86c.

--- a/zotero.bib
+++ b/zotero.bib
@@ -1,5 +1,6 @@
 
 @book{pearce_blueprint_1989,
+	edition = {1st Paperback Edition edition},
 	title = {Blueprint for a {Green} {Economy}},
 	isbn = {9781853830662},
 	abstract = {This report has been prepared by the London Environmental Economics Centre (LEEC). LEEC is a joint venture, established in 1988, by the International Institute for Environment and Development (IIED) and the department of Economics of University College London (UCL). Popularly known as The Pearce Report, this book is a report prepared for the Department of the Environment. It demonstrates the ways in which elements in our environment at present under threat from many forms of pollution can be costed. The book goes on to show ways in which governments are able, as a consequence of this analysis, to construct systems of taxation which would both reduce pollution by making it too costly and generate revenue for cleaning up much of the damage. The book ends with a series of skeleton programmes for progress.},
@@ -38,7 +39,7 @@
 	title = {Human {Well}-{Being} and the {Natural} {Environment}},
 	isbn = {978-0-19-926719-4},
 	abstract = {In , Partha Dasgupta explores ways to measure the quality of life. In developing quality-of-life indices, he pays particular attention to the natural environment, illustrating how it can be incorporated, more generally, into economic reasoning in a seamless manner. Professor Dasgupta puts the theory that he develops to use in extended commentaries on the economics of population, poverty traps, global warming, structural adjustment programmes, and free trade, particularly in relation to poor countries. The result is a treatise that goes beyond quality-of-life measures and offers a comprehensive account of the newly emergent subject of ecological economics. With the publication of this new paperback edition, Professor Dasgupta has taken the opportunity to update and revise his text in a number of ways, including developments to facilitate its current use on a number of gradate courses in environmental and resource economics. The treatment of the welfare economics of imperfect economies has been developed using new findings, and the Appendix has been expanded to include applications of the theory to a number of institutions, and to develop approximate formulae for estimating the value of environmental natural resources.},
-	publisher = {Oxford University Press},
+	publisher = {Also available as: Hardback {\textbar} eBook},
 	author = {Dasgupta, Partha},
 	month = mar,
 	year = {2004},
