--- a/zotero.bib
+++ b/zotero.bib
@@ -87,9 +87,9 @@
 	year = {2013}
 }
 
-@misc{united_nations_system_2014,
-	title = {System of {Enviornmental} {Economic} {Accounting} 2012 - {Central} {Framework}},
+@misc{un_system_2014,
+	title = {System of {Environmental} {Economic} {Accounting} 2012 - {Central} {Framework}},
 	publisher = {United Nations, European union, Food and Agrigculture Organization of the United Nations, International Monetary Fund, Organisation for Economic Co-operation and Development, The World Bank},
-	author = {United Nations and European Union and Food {and} Agriculture Organization of the United Nations and International Monetary Fund and Organisation for Economiic Co-operation {and} Development and The World Bank},
+	author = {UN},
 	year = {2014}
 }
