--- a/zotero.bib
+++ b/zotero.bib
@@ -1,13 +1,13 @@
 
-@book{pearce_blueprint_1989,
-	title = {Blueprint for a {Green} {Economy}},
-	isbn = {9781853830662},
-	abstract = {This report has been prepared by the London Environmental Economics Centre (LEEC). LEEC is a joint venture, established in 1988, by the International Institute for Environment and Development (IIED) and the department of Economics of University College London (UCL). Popularly known as The Pearce Report, this book is a report prepared for the Department of the Environment. It demonstrates the ways in which elements in our environment at present under threat from many forms of pollution can be costed. The book goes on to show ways in which governments are able, as a consequence of this analysis, to construct systems of taxation which would both reduce pollution by making it too costly and generate revenue for cleaning up much of the damage. The book ends with a series of skeleton programmes for progress.},
-	language = {English},
-	publisher = {Routledge},
-	author = {Pearce, David W. and Markandya, Anil and Barbier, Edward B.},
-	month = sep,
-	year = {1989}
+@book{dasgupta_human_2004,
+	title = {Human {Well}-{Being} and the {Natural} {Environment}},
+	isbn = {978-0-19-926719-4},
+	abstract = {In , Partha Dasgupta explores ways to measure the quality of life. In developing quality-of-life indices, he pays particular attention to the natural environment, illustrating how it can be incorporated, more generally, into economic reasoning in a seamless manner. Professor Dasgupta puts the theory that he develops to use in extended commentaries on the economics of population, poverty traps, global warming, structural adjustment programmes, and free trade, particularly in relation to poor countries. The result is a treatise that goes beyond quality-of-life measures and offers a comprehensive account of the newly emergent subject of ecological economics. With the publication of this new paperback edition, Professor Dasgupta has taken the opportunity to update and revise his text in a number of ways, including developments to facilitate its current use on a number of gradate courses in environmental and resource economics. The treatment of the welfare economics of imperfect economies has been developed using new findings, and the Appendix has been expanded to include applications of the theory to a number of institutions, and to develop approximate formulae for estimating the value of environmental natural resources.},
+	publisher = {Oxford University Press},
+	author = {Dasgupta, Partha},
+	month = mar,
+	year = {2004},
+	keywords = {Academic, Professional, \& General, Development Economics, ECONOMICS, Economics \& Finance}
 }
 
 @techreport{goodwin_five_2003,
@@ -19,30 +19,7 @@
 	institution = {GDAE, Tufts University},
 	author = {Goodwin, Neva R.},
 	year = {2003},
-	file = {RePEc Snapshot:C\:\\Users\\Renato\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\zl9zr4h1.default\\zotero\\storage\\DBIQ9WJG\\03-07.html:text/html}
-}
-
-@book{lange_environmental_2003,
-	title = {Environmental {Accounting} in {Action}: {Case} {Studies} from {Southern} {Africa}},
-	isbn = {9781843760764},
-	shorttitle = {Environmental {Accounting} in {Action}},
-	abstract = {Environmental accounts bring together economic and environmental information in a common framework to measure the contribution of the environment to the economy and the impact of the economy on the environment. They enable governments to set priorities, monitor economic policies more precisely, enact more effective environmental regulations and resource management strategies, and design more efficient market instruments for environmental policies. Many industrialized countries compile environmental accounts, but progress in developing countries has been limited - even though the need for environmental accounts is perhaps more acute in these regions. "Environmental Accounting in Action" studies the experiences of Namibia, Botswana and South Africa, the core countries of a unique, regional environmental accounting programme in Southern Africa. Covering minerals, forestry, fisheries and water, each chapter provides important lessons about sustainable resource management. As a whole, the case studies demonstrate how to overcome the many challenges of constructing environmental accounts and the mechanics of successful implementation. By providing a transparent system of information about the relationship between human activities and the environment, the accounts have improved policy dialogue among different stakeholders and have played a significant role in environmental policy design.},
-	language = {English},
-	publisher = {Edward Elgar Pub},
-	author = {Lange, Glenn-Marie and Hassan, Rashid M. and Hamilton, Kirk and Jiwanji, Moortaza},
-	month = apr,
-	year = {2003}
-}
-
-@book{dasgupta_human_2004,
-	title = {Human {Well}-{Being} and the {Natural} {Environment}},
-	isbn = {978-0-19-926719-4},
-	abstract = {In , Partha Dasgupta explores ways to measure the quality of life. In developing quality-of-life indices, he pays particular attention to the natural environment, illustrating how it can be incorporated, more generally, into economic reasoning in a seamless manner. Professor Dasgupta puts the theory that he develops to use in extended commentaries on the economics of population, poverty traps, global warming, structural adjustment programmes, and free trade, particularly in relation to poor countries. The result is a treatise that goes beyond quality-of-life measures and offers a comprehensive account of the newly emergent subject of ecological economics. With the publication of this new paperback edition, Professor Dasgupta has taken the opportunity to update and revise his text in a number of ways, including developments to facilitate its current use on a number of gradate courses in environmental and resource economics. The treatment of the welfare economics of imperfect economies has been developed using new findings, and the Appendix has been expanded to include applications of the theory to a number of institutions, and to develop approximate formulae for estimating the value of environmental natural resources.},
-	publisher = {Oxford University Press},
-	author = {Dasgupta, Partha},
-	month = mar,
-	year = {2004},
-	keywords = {Academic, Professional, \& General, Development Economics, ECONOMICS, Economics \& Finance}
+	file = {RePEc Snapshot:/Users/renato/Library/Application Support/Firefox/Profiles/tr50p8af.default/zotero/storage/DBIQ9WJG/03-07.html:text/html}
 }
 
 @techreport{hamilton_where_2006,
@@ -55,7 +32,48 @@
 	author = {Hamilton, Kirk and Ruta, Giovanni and Silva, Patricia and Lange, Glenn-Marie and Markandya, Anil and Ordoubadi, M. Saeed and Bolt, Katharine and Pedroso-Galinato, Suzette and Tajibaeva, Liaila},
 	year = {2006},
 	pages = {1--212},
-	file = {Full Text PDF:C\:\\Users\\Renato\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\zl9zr4h1.default\\zotero\\storage\\FKWWZH4J\\Ruta et al. - 2005 - Where is the wealth of nations  measuring capita.pdf:application/pdf;Snapshot:C\:\\Users\\Renato\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\zl9zr4h1.default\\zotero\\storage\\KU8HN9ZU\\wealth-nations-measuring-capital-21st-century.html:text/html}
+	file = {Full Text PDF:/Users/renato/Library/Application Support/Firefox/Profiles/tr50p8af.default/zotero/storage/FKWWZH4J/Ruta et al. - 2005 - Where is the wealth of nations  measuring capita.pdf:application/pdf;Snapshot:/Users/renato/Library/Application Support/Firefox/Profiles/tr50p8af.default/zotero/storage/KU8HN9ZU/wealth-nations-measuring-capital-21st-century.html:text/html}
+}
+
+@techreport{iarna-url_cadena_2009,
+	title = {La cadena de la tala no controlada: los casos de {Tecpán} {Guatemala}, {Chimaltenango} y {San} {Juan} {Sacatepéquez}, {Guatemala}},
+	institution = {Universidad Rafael Landívar, Instituto de Agricultura, Recursos Naturales y Ambiente},
+	author = {Iarna-Url},
+	year = {2009}
+}
+
+@techreport{iarna-url_perfil_2012,
+	address = {Guatemala},
+	title = {Perfil {Ambiental} de {Guatemala} 2010-2012: {Vulnerabilidad} local y creciente construcción de riesgo},
+	institution = {Instituto de Agricultura, Recursos Naturales y Ambiente de la Universidad Rafael Landívar},
+	author = {Iarna-Url},
+	year = {2012}
+}
+
+@techreport{inab_oferta_2012,
+	address = {Guatemala},
+	title = {Oferta y demanda de leña en la {República} de {Guatemala}},
+	institution = {Instituto Nacional de Bosques, Instituto de Agricultura, Recursos Naturales y Ambiente de la Universidad Rafael Landívar, Organización de las Naciones Unidas para la Alimentación y la Agricultura},
+	author = {Inab and Iarna-Url and FAO},
+	year = {2012}
+}
+
+@techreport{ine_sistema_2013,
+	address = {Guatemala},
+	title = {Sistema de {Contabilidad} {Ambiental} y {Económica} de {Guatemala} 2001-2010: {Compendio} {Estadístico} ({SCAE} 2001-2010), {Tomo} {I}},
+	shorttitle = {{SCAE} 2001-2010, {Tomo} {I}},
+	institution = {Instituto Nacional de Estadística, Banco de Guatemala, Instituto de Agricultura, Recursos Naturales y Ambiente (Iarna) de la Universidad Rafael Landívar (URL)},
+	author = {Ine and Banguat and Iarna-Url},
+	year = {2013}
+}
+
+@techreport{ine_sistema_2013-1,
+	address = {Guatemala},
+	title = {Sistema de {Contabilidad} {Ambiental} y {Económica} de {Guatemala} 2001-2010: {Compendio} {Estadístico} ({SCAE} 2001-2010), {Tomo} {II}},
+	shorttitle = {{SCAE} 2001-2010, {Tomo} {II}},
+	institution = {Instituto Nacional de Estadística, Banco de Guatemala, Instituto de Agricultura, Recursos Naturales y Ambiente (Iarna) de la Universidad Rafael Landívar (URL)},
+	author = {Ine and Banguat and Iarna-Url},
+	year = {2013}
 }
 
 @book{lange_changing_2011,
@@ -71,12 +89,16 @@
 	year = {2011}
 }
 
-@techreport{iarna-url_perfil_2012,
-	address = {Guatemala},
-	title = {Perfil {Ambiental} de {Guatemala} 2010-2012: {Vulnerabilidad} local y creciente construcción de riesgo},
-	institution = {Instituto de Agricultura, Recursos Naturales y Ambiente de la Universidad Rafael Landívar},
-	author = {Iarna-Url},
-	year = {2012}
+@book{lange_environmental_2003,
+	title = {Environmental {Accounting} in {Action}: {Case} {Studies} from {Southern} {Africa}},
+	isbn = {9781843760764},
+	shorttitle = {Environmental {Accounting} in {Action}},
+	abstract = {Environmental accounts bring together economic and environmental information in a common framework to measure the contribution of the environment to the economy and the impact of the economy on the environment. They enable governments to set priorities, monitor economic policies more precisely, enact more effective environmental regulations and resource management strategies, and design more efficient market instruments for environmental policies. Many industrialized countries compile environmental accounts, but progress in developing countries has been limited - even though the need for environmental accounts is perhaps more acute in these regions. "Environmental Accounting in Action" studies the experiences of Namibia, Botswana and South Africa, the core countries of a unique, regional environmental accounting programme in Southern Africa. Covering minerals, forestry, fisheries and water, each chapter provides important lessons about sustainable resource management. As a whole, the case studies demonstrate how to overcome the many challenges of constructing environmental accounts and the mechanics of successful implementation. By providing a transparent system of information about the relationship between human activities and the environment, the accounts have improved policy dialogue among different stakeholders and have played a significant role in environmental policy design.},
+	language = {English},
+	publisher = {Edward Elgar Pub},
+	author = {Lange, Glenn-Marie and Hassan, Rashid M. and Hamilton, Kirk and Jiwanji, Moortaza},
+	month = apr,
+	year = {2003}
 }
 
 @techreport{marn_informe_2013,
@@ -85,6 +107,17 @@
 	institution = {Ministerio de Ambiente y Recursos Naturales},
 	author = {Marn},
 	year = {2013}
+}
+
+@book{pearce_blueprint_1989,
+	title = {Blueprint for a {Green} {Economy}},
+	isbn = {9781853830662},
+	abstract = {This report has been prepared by the London Environmental Economics Centre (LEEC). LEEC is a joint venture, established in 1988, by the International Institute for Environment and Development (IIED) and the department of Economics of University College London (UCL). Popularly known as The Pearce Report, this book is a report prepared for the Department of the Environment. It demonstrates the ways in which elements in our environment at present under threat from many forms of pollution can be costed. The book goes on to show ways in which governments are able, as a consequence of this analysis, to construct systems of taxation which would both reduce pollution by making it too costly and generate revenue for cleaning up much of the damage. The book ends with a series of skeleton programmes for progress.},
+	language = {English},
+	publisher = {Routledge},
+	author = {Pearce, David W. and Markandya, Anil and Barbier, Edward B.},
+	month = sep,
+	year = {1989}
 }
 
 @misc{un_system_2014,
