Agregué la CIEE
Agregué la información de la cuenta de energía

--- a/zotero.bib
+++ b/zotero.bib
@@ -42,6 +42,14 @@
 	year = {2009}
 }
 
+@techreport{iarna-url_perfil_2009,
+	address = {Guatemala},
+	title = {Perfil {Ambiental} de {Guatemala} 2008-2009: las señales ambientales críticas y su relación con el desarrollo.},
+	institution = {Instituto de Agricultura, Recursos Naturales y Ambiente de la Universidad Rafael Landívar},
+	author = {Iarna-Url},
+	year = {2009}
+}
+
 @techreport{iarna-url_perfil_2012,
 	address = {Guatemala},
 	title = {Perfil {Ambiental} de {Guatemala} 2010-2012: {Vulnerabilidad} local y creciente construcción de riesgo},
@@ -101,11 +109,38 @@
 	year = {2003}
 }
 
+@book{leontief_input-output_1986,
+	title = {Input-output economics},
+	isbn = {9780195035254},
+	abstract = {This collection of writings provides the only comprehensive introduction to the input-output model for which Leontief was awarded the Nobel Prize in 1973. The structural approach to economics developed by Leontief, and known as input-output analysis, paved the way for the transformation ofeconomics into a truly empirical discipline that could utilize modern data processing technology. This thoroughly revised second edition includes twenty essays--twelve of which are new to this edition--that reflect the past developments and the present state of the field. Beginning with anintroductory chapter, the book leads the reader into an understanding of the input-output approach--not only as formal theory but also as a research strategy and powerful tool for dealing with a complex modern economy.},
+	language = {en},
+	publisher = {Oxford University Press},
+	author = {Leontief, Wassily},
+	year = {1986},
+	keywords = {Business \& Economics / Econometrics, Business \& Economics / Economic Conditions, Business \& Economics / Economics / Macroeconomics, Business \& Economics / General, Input-output analysis, Input-output tables, Input-output tables - United States, Input-output tables/ United States, Language Arts \& Disciplines / Linguistics / General, Science / Reference}
+}
+
 @techreport{marn_informe_2013,
 	address = {Guatemala},
 	title = {Informe {Ambiental} del {Estado} 2012},
 	institution = {Ministerio de Ambiente y Recursos Naturales},
 	author = {Marn},
+	year = {2013}
+}
+
+@techreport{mem_plan_2013,
+	address = {Guatemala},
+	title = {Plan estratégico para el uso sostenible de la leña},
+	institution = {Ministerio de Energía y Minas},
+	author = {Mem},
+	year = {2013}
+}
+
+@techreport{mem_politica_2013,
+	address = {Guatemala},
+	title = {Política {Energética} 2013-2017: {Energía} para el desarrollo, calidad, cantidad, competitividad},
+	institution = {Ministerio de Energía y Minas},
+	author = {Mem},
 	year = {2013}
 }
 
